# zerokv

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  conanfile.txt  requirements.txt
include/: zkv.h  zkv_config.h  zkv_conn.h  zkv_def.h  zkv_hash.h  zkv_log.h  zkv_sys.h
src/: main.c  zkv_config.c  zkv_conn.c  zkv_log.c  zkv_sys.c
